<?xml version="1.0"?>
<package format="3">
  <name>scout_gazebo</name>
  <version>0.0.1</version>
  <description>ROS 2 Gazebo bringup for AgileX Scout.</description>

  <maintainer email="cgz@example.com">cgz</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>scout_base</exec_depend>
  <exec_depend>scout_description</exec_depend>
  <exec_depend>scout_viz</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.."/>
  </export>
</package>
