<?xml version="1.0"?>
<package format="3">
  <name>scout_msgs</name>
  <version>0.3.3</version>
  <description>ROS 2 interface definitions for AgileX Scout.</description>

  <maintainer email="cgz@example.com">cgz</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
