<?xml version="1.0"?>
<package format="3">
  <name>scout_navigation</name>
  <version>0.1.0</version>
  <description>ROS 2 navigation, localization, and mapping entrypoints for the Agilex Scout.</description>

  <maintainer email="cgz@example.com">cgz</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>
  <exec_depend>nav2_dwb_controller</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_navfn_planner</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_waypoint_follower</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rtabmap_launch</exec_depend>
  <exec_depend>scout_bringup</exec_depend>
  <exec_depend>scout_control</exec_depend>
  <exec_depend>scout_gazebo</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
