<?xml version="1.0"?>
<package format="3">
  <name>ugv_sdk</name>
  <version>0.8.0</version>
  <description>Weston Robot Platform SDK.</description>

  <maintainer email="ruixiang.du@westonrobot.com">Ruixiang Du</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>asio</build_depend>
  <exec_depend>asio</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
